fix cut off modal

--- a/src/app/component/modal/modal.module.css
+++ b/src/app/component/modal/modal.module.css
@@ -10,4 +10,5 @@
   background-color: rgba(0,0,0,0.9); 
   justify-content: center;
   align-items: center;
+  padding: 30px 30px;
 }
